--- a/requirements.txt
+++ b/requirements.txt
@@ -2,3 +2,5 @@ Sphinx==1.6.5
 sphinx-rtd-theme==0.2.4
 sphinxcontrib-images==0.7.0
 sphinxprettysearchresults==0.3.5
+sphinxcontrib-websupport==1.0.1
+sphinx-tabs==1.1.10
